--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
             <a href="#" class="hover-links">Terms & Conditions </a>
             <a href="#" class="hover-links">Security information</a>
             <a href="#" class="hover-links"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="hover-links"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#" class="hover-links"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#" class="hover-links"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" class="hover-links"><i class="fa-brands fa-linkedin"></i></a>
             <a href="#" class="hover-links"><i class="fa-brands fa-youtube"></i></i></a>
 
 
